--- a/app/src/main/res/layout/main_activity_fragment.xml
+++ b/app/src/main/res/layout/main_activity_fragment.xml
@@ -1,34 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_activity_layout"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:id="@+id/main_activity_fragment_layout"
+    android:background="#ffffff">
 
     <!-- <com.example.pharmassist.MultiToucnView
         android:layout_width="match_parent"
         android:layout_height="match_parent" /> -->
 
 
-    <com.example.pharmassist.VerticalViewPager
-        android:id="@+id/viewpager"
+
+     <!-- <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-
-
-    </com.example.pharmassist.VerticalViewPager>
-    <!--<FrameLayout
-        android:id="@+id/fragmentcontainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-
-    </FrameLayout>
-
+        android:layout_height="match_parent"
+        android:textSize="50sp"
+        android:text="MAIN ACTIVITY"
+        android:layout_centerInParent="true"/> -->
 
     <LinearLayout
         android:layout_centerInParent="true"
@@ -63,6 +51,6 @@
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/form_submit_button"
-        android:alpha="0.8"/> -->
+        android:alpha="0.8"/>
 
 </RelativeLayout>
