--- a/app/src/main/res/drawable/form_submit_button.xml
+++ b/app/src/main/res/drawable/form_submit_button.xml
@@ -3,8 +3,8 @@
 
     <corners
         android:radius="175dp" />
-    <stroke
+    <solid
         android:width="3dp"
-        android:color="#000000" />
+        android:color="@color/white" />
 
 </shape>
