--- a/app/src/main/res/drawable/form_submit_button_doctor.xml
+++ b/app/src/main/res/drawable/form_submit_button_doctor.xml
@@ -3,8 +3,8 @@
 
     <corners
         android:radius="175dp" />
-    <stroke
+    <solid
         android:width="3dp"
-        android:color="#EEEEEE" />
+        android:color="@color/red" />
 
 </shape>
