--- a/app/src/main/res/layout/activity_consumed.xml
+++ b/app/src/main/res/layout/activity_consumed.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ConsumedActivity"
-    android:background="#EEEEEE">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_centerInParent="true"
@@ -19,6 +19,7 @@
             android:text="Did you consume the pill?"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
+            android:textColor="@color/red"
             android:id="@+id/ConsumeText"
             android:textSize="30dp"
             />
@@ -30,20 +31,20 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/ConsumeText">
             <Button
-                android:layout_width="100dp"
+                android:layout_width="140dp"
                 android:id="@+id/yesButton"
-                android:layout_height="100dp"
-                android:background="@drawable/ic_check_circle_black_24dp"
+                android:layout_height="140dp"
+                android:background="@drawable/tick"
                 android:textSize="50dp"
                 android:layout_margin="25dp"
                 android:layout_marginLeft="35dp"
                 android:shadowColor="@color/colorPrimary"
                 />
             <Button
-                android:layout_width="100dp"
+                android:layout_width="140dp"
                 android:id="@+id/noButton"
-                android:layout_height="100dp"
-                android:background="@drawable/ic_block_black_24dp"
+                android:layout_height="140dp"
+                android:background="@drawable/cross"
                 android:textSize="50dp"
                 android:layout_margin="25dp"
 
