--- a/app/src/main/res/layout/activity_medicine_recognised.xml
+++ b/app/src/main/res/layout/activity_medicine_recognised.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:gravity="center_vertical"
     android:layout_height="match_parent"
+    android:background="@color/red"
     tools:context=".MedicineRecognised">
 
     <LinearLayout
@@ -20,6 +21,7 @@
         android:layout_height="wrap_content"
         android:text="Medicine Name"
         android:gravity="center"
+        android:textColor="@color/white"
         android:layout_centerHorizontal="true"
         android:textSize="40sp"/>
 
@@ -29,6 +31,7 @@
         android:layout_below="@id/medicine_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="Dosage"
         android:layout_gravity="center"
         android:gravity="center"
@@ -39,6 +42,7 @@
         android:id="@+id/morning_dose"
         android:textSize="20sp"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -47,6 +51,7 @@
         android:id="@+id/afternoon_dose"
         android:textSize="20sp"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
@@ -56,6 +61,7 @@
         android:id="@+id/night_dose"
         android:layout_gravity="center"
         android:textSize="20sp"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     </LinearLayout>
