--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Register">
 
         <LinearLayout
@@ -17,10 +18,10 @@
                 android:id="@+id/UserRegister"
                 android:layout_above="@+id/Email"
                 android:textSize="32dp"
-                android:text="Register"
+                android:text="REGISTER"
                 android:layout_marginTop="30dp"
                 android:layout_marginHorizontal="15dp"
-                android:textColor="#000000"
+                android:textColor="@color/red"
                 android:textAlignment="center"
                 android:layout_gravity="center"/>
 
@@ -34,7 +35,8 @@
                 android:layout_marginBottom="10dp"
                 android:layout_below="@+id/TVUL"
                 android:hint="Enter Email"
-                android:textColorHint="#929292"
+                android:textColorHint="@color/red"
+                android:outlineAmbientShadowColor="@color/red"
                 android:inputType="textEmailAddress" />
 
             <EditText
@@ -44,7 +46,8 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginBottom="25dp"
-                android:textColorHint="#929292"
+                android:textColorHint="@color/red"
+                android:outlineAmbientShadowColor="@color/red"
                 android:hint="Enter Password"
                 android:layout_below="@+id/Email"
                 android:layout_above="@+id/BSignin"
@@ -59,8 +62,8 @@
                 android:layout_below="@+id/Password"
                 android:layout_gravity="center"
                 android:text="Click to register"
-                android:textColor="#000000"
-                android:background="@drawable/form_submit_button"/>
+                android:textColor="@color/white"
+                android:background="@drawable/form_submit_button_doctor"/>
 
         </LinearLayout>
 
