--- a/app/src/main/res/layout/activity_doctor_call_view.xml
+++ b/app/src/main/res/layout/activity_doctor_call_view.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/takess"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DoctorCallView">
@@ -12,7 +13,39 @@
         android:layout_height="match_parent"
         android:background="@android:color/white" />
 
-    <FrameLayout
+    <TextView
+        android:id="@+id/sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"
+        android:textColor="@color/white"
+        android:layout_above="@id/bp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginLeft="20sp"/>
+
+    <TextView
+        android:id="@+id/bp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"
+        android:layout_above="@id/linearlayout"
+        android:layout_alignParentLeft="true"
+        android:textColor="@color/white"
+        android:layout_marginBottom="25dp"
+        android:layout_marginLeft="20sp"/>
+
+    <TextView
+        android:id="@+id/bpm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@id/linearlayout"
+        android:textColor="@color/white"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="20sp"/>
+
+    <!-- <FrameLayout
         android:id="@+id/local_video_view_container"
         android:layout_width="160dp"
         android:layout_height="284dp"
@@ -22,9 +55,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/darker_gray" /> -->
 
     <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
